--- a/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
+++ b/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
@@ -3,7 +3,7 @@
     <h4 class="col"> 
         Encounters
         <app-tooltip-infocircle 
-        [tooltipMessage]="'List of all encounters with this character. Starts with the most recent encounter and ends with the latest.'"
+        [tooltipMessage]="'List of all encounters with ' + articleCharacter.name + '. Starts with the most recent encounter and ends with the latest.'"
         ></app-tooltip-infocircle>
     </h4>
 </div>
