--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -72,7 +72,7 @@
         ></app-diary-entry-encounter-list>
 
         <!-- Next/Prior Diaryentry Buttons -->
-        <div class="mb-3 d-flex align-items-center justify-content-between">
+        <div class="row mb-3 d-flex align-items-center justify-content-between">
             <!-- Next Diaryentry -->
             <div class="col-lg-2 col-md-4 col-5">
                 <a  
