--- a/src/app/components/articles/quote-overview/quote-overview.component.html
+++ b/src/app/components/articles/quote-overview/quote-overview.component.html
@@ -8,23 +8,10 @@
             </a>
         </h5>
 
-        <div class="btn btn-secondary my-3" (click)="toggleQuoteCreateState()"> Add Quote </div>
-
-        <blockquote *ngIf="inQuoteCreateState">
-
-            <!-- Heading -->
-            <h5 class="border-white border-bottom">
-                Create Quote for {{character.name}}
-            </h5>
-    
-            <!-- Form -->
-            <form [formGroup]="quoteForm" (submit)="onSubmit()">
-                <formly-form [form]="quoteForm" [fields]="quoteFields" [model]="quoteModel"></formly-form>
-                <div class="btn btn-secondary mr-3" (click)="onCancel()">Cancel</div>
-                <button type="submit" class="btn btn-secondary">Submit</button>
-            </form>
-    
-        </blockquote>
+        <div class="btn btn-primary my-3" (click)="addArticle()"> 
+            <span class="fas fa-plus"></span>
+            Add Quote 
+        </div>
 
         <div *ngFor="let quote of articles; let quoteIndex = index" class="mb-5">
             <!-- Quote Heading -->
@@ -36,7 +23,8 @@
             [character]="character"
             [campaign]="campaign"
             [quote]="quote"
-            (delete)="deleteQuote(quoteIndex)"
+            (delete)="onArticleDelete(quoteIndex)"
+            (create)="articles[quoteIndex]=$event"
             ></app-quotefield>
         </div>
 
