Removed even more unnecessary stuff

--- a/src/app/components/home2/home2.component.html
+++ b/src/app/components/home2/home2.component.html
@@ -12,7 +12,7 @@
     </header>
     
     <!-- Search Bar -->
-    <div class="mb-4" id="search-area" (touchend)="focusSearchField()">
+    <div class="mb-4" id="search-area">
         <form class="flex-1 p-1" (submit)="startSearch()">
             <div class="d-flex searchbar">
                 <input 
