--- a/src/app/components/utility/formly-datepicker/formly-datepicker.component.scss
+++ b/src/app/components/utility/formly-datepicker/formly-datepicker.component.scss
@@ -17,7 +17,7 @@
 }
 
 div.datepicker-day{
-    background-color: #1b1f22;
+    background-color: var(--wiki-background-2);
     color: white;
     text-align: center;
     transition: background-color 0.2s ease-in-out;
