--- a/src/styles.scss
+++ b/src/styles.scss
@@ -217,7 +217,7 @@ a:hover{
 .main{
 	max-width: 60rem;
 	width: 100%;
-    background-color:rgba(27, 31, 34, 0.85);
+    background-color:var(--wiki-background-1);
     border-radius: 6px;
     padding: 2.5rem 2.5rem 2.5rem 2.5rem;
 	margin-bottom: 1.5rem !important;
@@ -394,7 +394,7 @@ h2{
     align-items: center;
     align-content: center;
     border-radius: 4px;
-    background-color:rgba(27, 31, 34, 0.85);
+    background-color:var(--wiki-background-1);
     padding: 0.5rem 1rem;
     justify-content: flex-end;
 }
