Fixed Quest URLs not being properly done

--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -58,7 +58,7 @@
                         <td>
                             <a 
                             id="quest{{ quest.pk }}" 
-                            routerLink="{{ questURLs[questIndex] }}"
+                            routerLink="{{ quest.getAbsoluteRouterUrl() }}"
                             >
                                  <span class="bold">{{ quest.name }}</span>
                             </a>
