--- a/src/app/components/articles/creature-article-update/creature-article-update.component.html
+++ b/src/app/components/articles/creature-article-update/creature-article-update.component.html
@@ -2,14 +2,14 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="creatureUrl"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="updateCancelUrl"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Creature {{ userModel.name }}
             </h2>
         </div>
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="creatureOverviewUrl"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="creationCancelUrl"></app-edit-toggle>
 
             <h2 class="text-center">
                 Adding a new Creature
