--- a/src/app/components/articles/location-article-update/location-article-update.component.html
+++ b/src/app/components/articles/location-article-update/location-article-update.component.html
@@ -2,7 +2,7 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
-            <app-edit-toggle [isInUpdateState]="true" [link]="'..'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]="true" [link]="updateCancelUrl"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Location {{ userModel.name }}
@@ -12,7 +12,7 @@
         <ng-template #createState>
             <app-edit-toggle 
             [isInUpdateState]="true" 
-            [link]="locationOverviewUrl"
+            [link]="creationCancelUrl"
             ></app-edit-toggle>
 
             <h2 class="text-center">
@@ -40,6 +40,4 @@
         ></app-compare-form-container>
 
     </article>
-    <!-- Spinner while loading -->
-    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
