--- a/src/app/components/articles/organization-article-update/organization-article-update.component.html
+++ b/src/app/components/articles/organization-article-update/organization-article-update.component.html
@@ -13,7 +13,7 @@
         <ng-template #createState>
             <app-edit-toggle 
             [isInUpdateState]=true 
-            [link]="routingService.getRoutePath('organization-overview', {campaign: campaign})"
+            [link]="creationCancelUrl"
             ></app-edit-toggle>
 
             <h2 class="text-center"> Creating a new Organization </h2>
@@ -38,6 +38,4 @@
         ></app-compare-form-container>
 
     </article>
-    <!-- Spinner while loading -->
-    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
