--- a/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
+++ b/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
@@ -2,7 +2,7 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]="true" [link]="updateCancelUrl"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Diaryentry "{{ userModel.title }}"
@@ -10,7 +10,7 @@
         </div>
         
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="diaryentryOverviewUrl"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]="true" [link]="creationCancelUrl"></app-edit-toggle>
             <h2 class="text-center">
                 Creating a new Diaryentry
             </h2>
@@ -36,6 +36,4 @@
         ></app-compare-form-container>
 
     </article>
-    <!-- Spinner while loading -->
-    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
