Adjusted quest create/update to use resolvers

--- a/src/app/components/articles/quest-article-update/quest-article-update.component.html
+++ b/src/app/components/articles/quest-article-update/quest-article-update.component.html
@@ -3,19 +3,19 @@
         <!-- Heading -->
         <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
             <app-edit-toggle 
-            [isInUpdateState]=true 
-            [link]="'..'"
+            [isInUpdateState]="true" 
+            [link]="updateCancelUrl"
             ></app-edit-toggle>
 
             <h2 class="text-center">
-                Updating Organization {{ userModel.name }}
+                Updating Quest {{ userModel.name }}
             </h2>
         </div>
         
         <ng-template #createState>
             <app-edit-toggle 
-            [isInUpdateState]=true 
-            [link]="questOverviewUrl"
+            [isInUpdateState]="true" 
+            [link]="creationCancelUrl"
             ></app-edit-toggle>
 
             <h2 class="text-center">
@@ -43,6 +43,4 @@
         ></app-compare-form-container>
 
     </article>
-    <!-- Spinner while loading -->
-    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
