Made spinner slightly thicker

--- a/src/app/custom_bootstrap.scss
+++ b/src/app/custom_bootstrap.scss
@@ -185,6 +185,7 @@ button.btn.btn-link:focus{
 #article-loader-spinner.spinner-border{
     width: 5rem !important;
     height: 5rem !important;
+    border-width: 1.5rem;
 }
 
 //Style Forms
